feat: [Kan-65] customer account top up (#4)
* feat: [KAN-65] rpc & swagger

* fix: [KAN-65] fix client/server -> client version

* feat: [KAN-65] implement redeem-code merchan api

* feat: [KAN-65] top-up/pay implementation

* feat: [KAN-65] pb struct update

* feat: [KAN-65] update server

* feat: [KAN-65] adjust pb

* fix: [KAN-65] server adjust for rpc

* feat: [KAN-65] add user-activated consumer

* feat: [KAN-65] reduce docker image size

* feat: [KAN-65] add unittest & remove demo code

* fix: [KAN-65] fix copilot comment
